[tool.poetry]
name = "blockchain-az"
version = "0.1.0"
description = ""
authors = ["Farzad FARID <farzy@farzy.org>"]
readme = "README.md"
packages = [{include = "blockchain_az"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
